Revert some changes to summary element. Fix grid alignment

--- a/src/components/common/listing/listing.css
+++ b/src/components/common/listing/listing.css
@@ -8,6 +8,7 @@
   }
 
   > * {
+    display: flex;
     flex: 1;
     margin: 0 map(spaces, xsmall) map(spaces, xsmall) 0;
 
